[gd_scene load_steps=2 format=3 uid="uid://ugsdwe0frxpi"]

[ext_resource type="Script" path="res://Common/Scripts/Manager_Options.gd" id="1_8btc1"]

[node name="OptionsContainer" type="GridContainer"]
size_flags_horizontal = 4
theme_override_constants/h_separation = 75
theme_override_constants/v_separation = 20
columns = 2
script = ExtResource("1_8btc1")

[node name="RESOLUTION" type="Label" parent="."]
layout_mode = 2
text = "Résolution"

[node name="OptionResolution" type="OptionButton" parent="."]
layout_mode = 2
item_count = 6
selected = 3
popup/item_0/text = "3440x1440 (21:9)"
popup/item_0/id = 0
popup/item_1/text = "2160x1080 (21:9)"
popup/item_1/id = 1
popup/item_2/text = "2160x1440 (16:9)"
popup/item_2/id = 2
popup/item_3/text = "1920x1080 (16:9)"
popup/item_3/id = 3
popup/item_4/text = "1600x900 (16:9)"
popup/item_4/id = 4
popup/item_5/text = "1280x720"
popup/item_5/id = 5

[node name="MAXFPS" type="Label" parent="."]
layout_mode = 2
text = "FPS max"

[node name="OptionMaxFPS" type="OptionButton" parent="."]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "60"
popup/item_0/id = 0
popup/item_1/text = "30"
popup/item_1/id = 1
popup/item_2/text = "15"
popup/item_2/id = 2

[node name="MAXPHYSICS" type="Label" parent="."]
visible = false
layout_mode = 2
text = "FPS max pour les objets
(utile sur les pc moins puissants)"

[node name="OptionMaxPhysics" type="OptionButton" parent="."]
visible = false
layout_mode = 2
item_count = 3
popup/item_0/text = "60"
popup/item_0/id = 0
popup/item_1/text = "30"
popup/item_1/id = 1
popup/item_2/text = "15"
popup/item_2/id = 2

[node name="WINDOWMODE" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Résolution"

[node name="OptionWindowed" type="OptionButton" parent="."]
visible = false
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Fenêtré"
popup/item_0/id = 0
popup/item_1/text = "Fenêtré sans bordures"
popup/item_1/id = 1
popup/item_2/text = "Plein écran"
popup/item_2/id = 2

[node name="VSYNC" type="Label" parent="."]
layout_mode = 2
text = "Vsync"

[node name="CheckBoxVsync" type="CheckBox" parent="."]
layout_mode = 2

[node name="BLOCKRESIZE" type="Label" parent="."]
layout_mode = 2
text = "Bloquer la taille de la fenêtre"

[node name="CheckBoxLockSize" type="CheckBox" parent="."]
layout_mode = 2

[node name="ANTIALIASING" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Antialiasing (adoucissement)"

[node name="OptionAntiAliasing" type="OptionButton" parent="."]
visible = false
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "Aucun"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "MSAA x2"
popup/item_2/id = 2
popup/item_3/text = "MSAA x4"
popup/item_3/id = 4
popup/item_4/text = "MSAA x8"
popup/item_4/id = 4

[node name="LabelVolAll" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Volume principal"

[node name="HSliderVolAll" type="HSlider" parent="."]
visible = false
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 75.0
rounded = true
tick_count = 10

[node name="LabelVolEffects" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Effets
"

[node name="HSliderVolEffects" type="HSlider" parent="."]
visible = false
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 75.0
rounded = true
tick_count = 10

[node name="LabelVolMusic" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Musique"

[node name="HSliderVolMusic" type="HSlider" parent="."]
visible = false
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 75.0
rounded = true
tick_count = 10

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirmer..."
initial_position = 2
size = Vector2i(415, 147)
always_on_top = true
popup_window = true
ok_button_text = "Confirmer"
dialog_text = "Confirmer le changement ?

Les changements seront annulés dans 15 secondes."
cancel_button_text = "Annuler"

[node name="ConfirmationTimer" type="Timer" parent="ConfirmationDialog"]
wait_time = 15.0
one_shot = true

[node name="SaveSettings" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Enregistrer"

[connection signal="item_selected" from="OptionResolution" to="." method="_on_option_resolution_selected"]
[connection signal="item_selected" from="OptionMaxFPS" to="." method="_on_option_max_fps_selected"]
[connection signal="item_selected" from="OptionMaxPhysics" to="." method="_on_option_max_physics_selected"]
[connection signal="item_selected" from="OptionWindowed" to="." method="_on_option_windowed_selected"]
[connection signal="toggled" from="CheckBoxVsync" to="." method="_on_check_box_vsync_toggled"]
[connection signal="toggled" from="CheckBoxLockSize" to="." method="_on_check_box_lock_size_toggled"]
[connection signal="item_selected" from="OptionAntiAliasing" to="." method="_on_option_anti_aliasing_item_selected"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="timeout" from="ConfirmationDialog/ConfirmationTimer" to="." method="_on_confirmation_timer_timeout"]
[connection signal="pressed" from="SaveSettings" to="." method="_on_save_settings_pressed"]
